fix: add one more alignment fix LANG=en_EN date +'(%a, %b %d, %Y %r)'

--- a/cssMemSlider/styles/laptop.css
+++ b/cssMemSlider/styles/laptop.css
@@ -15,6 +15,7 @@ body {
     padding: 1rem;
     display: grid;
     grid-template-columns: 1fr 2rem 2rem 2rem 2rem;
+    grid-template-rows: 23rem 7rem;
     align-items: center;
     background-color: var(--bg-color);
 }
